2006-11-28  Mike Cvet  <mcvet@redhat.com>

	* funit-rt-threadstepper.c: Added. More interesting stepping cases.
	* funit-rt-stepper.c (signal_parent): Loop instead of exit.

2006-11-28  Chris Moller  <moller@mollerware.com>

	* funit-exit.xml: Add documentation for -exclude and -include
	switches. 

2006-11-27  Andrew Cagney  <cagney@redhat.com>

	* funit-threadexit.c (running_thread_can_exit): New barrier.
	(main, op_thread): Use running_thread_can_exit to block thread's
	exit until after main has opened the thread's /proc/stat file.

	* funit-threadexit.c (scan_thread): Delete
	(main): Do the scan for thread in 'X' state here, instead of in
	scan_thread.  Create only one thread.
	(condition_cond, condition_mutex): Delete.
	(thread_running_barrier): Rename "barrier".
	(thread_id): Make volatile.
	(op_thread): Simplify, use only one barrier.

2005-11-16  Mike Cvet  <mcvet@redhat.com>

	* funit-rt-stepper.c (jump): Added.
	(foo): Update call to switch back and forth from jump().

2006-11-15  Andrew Cagney  <cagney@redhat.com>

	* funit-exit.xml: New.
	* funit.xml: Cross reference funit-exit(8).
	* funit-child.xml: Ditto.
	* funit-exec.xml: Ditto.
	* funit-threads.xml: Ditto.

2006-11-14  Mike Cvet  <mcvet@redhat.com>

	* funit-rt-stepper.c (signal_parent): Added, fixes race condition.
	(main): Edited to fix race condition.

2006-11-13  Mike Cvet  <mcvet@redhat.com>
	
	* funit-rt-stepper.c: Added.

2006-11-06  Andrew Cagney  <cagney@redhat.com>

	* funit.xml: Mention --all and --stress.

	* funit.java: Call runTestCases.
	* funit.xml: Mention -n / --list-classes-only option.
	
	* funit.java: Pass "funit" to Runner constructor.

2006-10-19  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c :Do the same for all architectures.

2006-10-19  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-breakpoints.c (trap_handler): Call siglongjmp to return.
	(dummy): Call sigsetjmp to skip the invalid instruction after
	it is executed for the first time on PPC64.
